--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "node --max_http_header_size=128000 node_modules/vite/bin/vite.js",
+    "build": "node --max_http_header_size=128000 node_modules/vite/bin/vite.js build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "node --max_http_header_size=128000 node_modules/vite/bin/vite.js preview"
   },
   "dependencies": {
+    "@auth-kit/react-router": "^3.1.3",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
@@ -18,7 +19,9 @@
     "@mui/x-date-pickers": "^7.19.0",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-auth-kit": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "yup": "^1.4.0"
